--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr/>
 
         <h2><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
-        <img src="/Section 4 - Multi-Page Websites/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/assets/images/birthday_francis.png"/>
+        <img src="./assets/images/birthday_francis.png"/>
 
     <hr>
 
